@@ -1,5 +1,18 @@
 package at.nullpointer.trayrss.configuration.timeframes;
 
+import java.util.Calendar;
+
 public class Timeframe {
+
+	public Timeframe(String frame) {
+		
+		
+		// TODO Auto-generated constructor stub
+	}
+
+	public boolean isAllowed(Calendar now) {
+		// TODO Auto-generated method stub
+		return true;
+	}
 
 }
